{{$NEXT}}

0.34     2014-05-02

- More test fixes - relax the date parsing more.


0.33     2014-04-19

- Fixed tests so they pass with the most recent DateTime::Format::Mail (0.400)
  as well as older versions.


0.32     2014-04-19

- Courriel parsing is now more liberal and will accept an email with mixed
  line endings (some newline, some CRLF, etc.). Apparently this happens in the
  wild (of course it does). Reported by Joseph Crotty. RT #94837.


0.31     2013-04-03

[MISC]

- Removed the "this is very alpha" warning from the docs. It's really not very
  alpha any more.


0.30     2012-08-20

[API CHANGES]

- Courriel::Builder no longer exports a bcc() subroutine. Creating Bcc headers
  in emails does not make any sense whatsoever. See
  https://metacpan.org/module/Email::Sender::Manual::QuickStart#Hey-wheres-my-Bcc-support-
  for an explanation of why there is no such thing as a Bcc header.


0.29     2012-03-07

[BUG FIXES]

- Courriel now allows an email to have an empty subject when parsing, as does
  Courriel::Builder. Based on a patch from Zbigniew Łukasiak.


0.28     2012-02-01

[BUG FIXES]

- Header attribute names need to be looked up case-insensitively, according to
  the spec. The original casing is preserved in the Courriel::HeaderAttribute
  object's name(), method, but looking up an attribute by name on a
  Courriel::Header object now accepts any casing for the name.


0.27     2011-09-24

[ENHANCEMENTS]

- All objects which can stringify now support a ->stream_to API as well. This
  lets you stream their string output to a sub ref, filehandle, or an object
  with a ->print() method. If you are dealing with large emails, this API may
  be more efficient than generating a single string in memory.

[API CHANGES]

- Renamed the Header->as_header_string and HeaderAttribute->as_header_string
  methods to as_string, so that all objects have the same stringification API.


0.26     2011-09-19

[BUG FIXES]
