@@ -17,7 +17,7 @@ use DateTime::Format::Mail;
 use Devel::PartialDump;
 use File::Basename qw( basename );
 use File::LibMagic;
-use File::Slurp qw( read_file );
+use File::Slurp::Tiny qw( read_file );
 use List::AllUtils qw( first );
 use MooseX::Params::Validate qw( pos_validated_list validated_list );
 use Scalar::Util qw( blessed reftype );
